--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.14",
     "mic": "^2.1.2",
+    "node-wit": "^6.4.0",
     "uuid": "^3.0.0"
   },
   "engines": {
